model classes fix - also cleanup for the project (remove debug --etc)